[package]
name = "glass-rs"
version = "0.1.0"
authors = ["OctopusTakopi"]
description = "Trie-based ordered map for client-side order books (arXiv:2506.13991): cached paths, bounded hash-table cache, preemption, and AVX-512 accelerated order sweeps."
repository = "https://github.com/OctopusTakopi/glass-rs"
readme = "README.md"
keywords = ["order-book", "trie", "hft", "market-data", "data-structures"]
categories = ["data-structures", "finance", "algorithms"]
license = "MIT"
edition = "2024"
rust-version = "1.89"
exclude = [".idea/", ".github/"]

[features]
# Opt-in branch-probability hints (core::hint::likely/unlikely) on the hot
# routing branches. Requires a nightly toolchain; a no-op on stable builds.
nightly = []

[dependencies]
ahash = "0.8"

[dev-dependencies]
criterion = "0.8"
rand = "0.10"

[[bench]]
name = "basic"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"
strip = true
